# claude-sdk-slack-bot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
docs/: slack-memory-integration-docs.md
src/claude_slack_bot/: agent.py  bot.py  config.py  main.py  memory.py
